clusters/clowder/public-certs/resources.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: public-certs
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: public-certs
  namespace: public-certs
spec:
  parentRefs:
    - name: public
      namespace: ingress
  hostnames:
    - public-certs.cult-flat.izzy.kiwi
  rules:
    - backendRefs:
        - name: website-nginx
          port: 80
